--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="language" content="en" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
     <title>Practice - React Router</title>
   </head>
   <body>
