--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Practice React Router" />
+    <meta name="description" content="Building a clone of the inner workings of React Router from scratch" />
     <meta name="author" content="Kevin van der Schans Delgado" />
     <meta name="language" content="en" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
-    <title>Practice - React Router</title>
+    <title>Clon - React Router</title>
   </head>
   <body>
     <div id="root"></div>
